Trying to fix home component on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,11 @@ body::-webkit-scrollbar-thumb {
   background: #11bae5;
   border-radius: 10px;
 }
+
+html {
+  height: 100vh;
+}
+
+body {
+  height: 100vh;
+}
